tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -142,8 +142,7 @@ body.night h1 {
   line-height: 2px;
 }
 #linx {
-  position: absolute;
-  bottom: 0;
+  position: relative;
   left: 0;
   color: #333;
   font-size: 14px;
